--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    background-color:beige;
+    
+}
 .blue {
     color: grey;
     font-size: 50px;
@@ -34,7 +38,8 @@ h1{
     background-color: darkblue; 
     border-radius: 20px; 
     border-style: groove;
-    
+    width: 300px;
+    margin-left: 550px;
     border-top: 20px;
     opacity: 75%;
 }
@@ -48,7 +53,7 @@ h1{
 img {
     width: 200px;
     height: 200px;
-    border-radius: 90px;
+    border-radius: 50px;
     margin-top: -40px;
     margin-bottom: 20px;
     
