--- a/style.css
+++ b/style.css
@@ -56,6 +56,8 @@ img {
     border-radius: 50px;
     margin-top: -40px;
     margin-bottom: 20px;
+    border-color: cadetblue;
+    border: 5px groove cadetblue;
     
 }
 a {
